<resources>
    <string name="app_name">Trash_detective</string>
    <string name="title">保护</string>
    <string name="title2">我们独特的地球</string>
    <string name="button">Start</string>
    <string name="camera_error">你的设备不支持</string>
    <string name="picture">拍摄</string>
    <string name="loading">正在加载</string>
    <string name="back">返回</string>
    <string name="pic_showup_desc">展示</string>
    <string name="introduce">本项目还在艰难的开发中。。。。。。。。。。。。</string>
    <string name="version">v0.06.1</string>

    <string name="logint">登录界面</string>
    <string name="etUser_hint">用户名/邮箱/手机</string>
    <string name="pswHint">密码</string>
    <string name="rempsw">记住密码</string>
    <string name="logintxt">登录</string>
    <string name="yhzc">用户注册</string>
    <string name="plsu">请输入用户名</string>
    <string name="plsemail">请输入邮箱</string>
    <string name="plsohone">请输入手机号</string>
    <string name="plspsw">请输入密码</string>
    <string name="reg">注册</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>

</resources>
