<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_gary"
    android:orientation="vertical"
    tools:context=".S_AppInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStatusBar"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/back_toolBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:src="@mipmap/icon_new_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="版本信息"
                android:textColor="#333333"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textColor="#333333"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/version"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="341dp"
            android:layout_height="318dp"
            android:layout_marginTop="30dp"
            android:text="@string/introduce"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_app_info_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:textColor="#999999"
        android:textSize="10sp"
        tools:text="@string/version" />
</LinearLayout>